apply plugin: 'idea'
apply plugin: 'groovy'
apply plugin: 'maven'
apply from: "$rootDir/gradle/jacoco.gradle"
apply from: "$rootDir/gradle/sonar.gradle"

group = 'com.iadams.plugins'
version = '0.1-SNAPSHOT'

description = 'Gradle plugin for packaging SonarQube plugins.'

sourceCompatibility = 1.6
targetCompatibility = 1.6

repositories {
    jcenter()
}
dependencies {
    compile localGroovy()
    compile gradleApi()
    compile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7'

    testCompile ('com.netflix.nebula:nebula-test:2.2.1') { exclude group: 'org.codehaus.groovy' }
}

sourceSets {
    integTest {
        groovy.srcDir file('src/integTest/groovy')
        resources.srcDir file('src/integTest/resources')
        compileClasspath = sourceSets.main.output + configurations.testRuntime
        runtimeClasspath = output + compileClasspath
    }
}

task integTest(type: Test) {
    group = 'verification'
    testClassesDir = sourceSets.integTest.output.classesDir
    classpath = sourceSets.integTest.runtimeClasspath
    reports.html.destination = file("$buildDir/reports/integ")
    jvmArgs '-XX:MaxPermSize=256m'
}

task jacocoIntegTestReport(type: JacocoReport) {
    sourceSets sourceSets.main
    executionData integTest
    reports {
        xml.enabled true
        csv.enabled false
        html.destination "${buildDir}/reports/jacocoInteg"
    }
}

task jacocoCombinedTestReport(type: JacocoReport) {
    sourceSets sourceSets.main
    executionData test, integTest
    reports {
        xml.enabled true
        csv.enabled false
        html.destination "${buildDir}/reports/jacocoCombined"
    }
}

integTest.mustRunAfter test
check.dependsOn integTest

//Generate Jacoco Reports after each test task.
test.finalizedBy jacocoTestReport
integTest.finalizedBy jacocoIntegTestReport
integTest.finalizedBy jacocoCombinedTestReport